# afdac-api

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE
scraper_rs/: BUILD.bazel  Cargo.toml
scraper_rs/src/: crawler.rs  lib.rs  main.rs  response.json
src/: main.rs
