load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

cargo_build_script(
    name = "build_script",
    srcs = [
        "build.rs",
    ],
    deps = all_crate_deps(
        normal = True,
        build = True,
    ),
    crate_root = "build.rs",
)

rust_library(
    name = "scraper_lib",
    srcs = [
        "src/lib.rs",
    ],
    deps = [":build_script"],
)

rust_binary(
    name = "scraper_rs",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    deps = all_crate_deps(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
)
