[package]
name = "scraper_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.18.1"
fantoccini = "0.19.3"
tokio = { version = "1", features = ["full"] }
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
failure = "0.1.8"
anyhow = "1"
