[package]
name = "scraper_rs"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18.1"
fantoccini = "0.19.3"
tokio = { version = "1", features = ["full"] }
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
], branch = "main", commit = "973ebea000fdc4709872490b680306bcf73a606a" }
failure = "0.1.8"
anyhow = "1"
chrono = "0.4.31"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
